v/0.3.0/_sources/examples/06_model_perturbation_hook.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/06_model_perturbation_hook.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_06_model_perturbation_hook.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_06_model_perturbation_hook.py:


Model Hook Injection: Perturbation
==================================

Adding model noise by using custom hooks.

This example will demonstrate how to run an ensemble inference workflow to generate a
perturbed ensemble forecast. This perturbation is done by injecting code into the model
front and rear hooks.
These hooks are applied to the tensor data before/after the model forward call.

This example also illustrates how you can subselect data for IO. In this example we
will only output two variables:
total column water vapor (tcwv) and 500 hPa geopotential (z500).
To run this, make sure that the model selected predicts these variables are change
appropriately.

In this example you will learn:

- How to instantiate a built in prognostic model
- Creating a data source and IO object
- Changing the model forward/rear hooks
- Choose a subselection of coordinates to save to an IO object.
- Post-processing results

.. GENERATED FROM PYTHON SOURCE LINES 45-64

Creating an Ensemble Workflow
-----------------------------------

To start let's begin with creating an ensemble workflow to use. We encourage
users to explore and experiment with their own custom workflows that borrow ideas from
built in workflows inside :py:obj:`earth2studio.run` or the examples.

Creating our own generalizable ensemble workflow is easy when we rely on the component
interfaces defined in Earth2Studio (use dependency injection). Here we create a run
method that accepts the following:

- time: Input list of datetimes / strings to run inference for
- nsteps: Number of forecast steps to predict
- nensemble: Number of ensembles to run for
- prognostic: Our initialized prognostic model
- data: Initialized data source to fetch initial conditions from
- io: io store that data is written to.
- output_coords: CoordSystem of output coordinates that should be saved. Should be
  a proper subset of model output coordinates.

.. GENERATED FROM PYTHON SOURCE LINES 66-80

Set Up
------
With the ensemble workflow defined, we now need to create the individual components.

We need the following:

- Prognostic Model: Use the built in DLWP model :py:class:`earth2studio.models.px.DLWP`.
- Datasource: Pull data from the GFS data api :py:class:`earth2studio.data.GFS`.
- IO Backend: Save the outputs into a Zarr store :py:class:`earth2studio.io.ZarrBackend`.

We will first run the ensemble workflow using an unmodified function, that is a model that has the
default (identity) forward and rear hooks. Then we will define new hooks for the model and rerun the
inference request.
%%

.. GENERATED FROM PYTHON SOURCE LINES 80-107

.. code-block:: Python

    import os

    os.makedirs("outputs", exist_ok=True)
    from dotenv import load_dotenv

    load_dotenv()  # TODO: make common example prep function

    import numpy as np

    from earth2studio.data import GFS
    from earth2studio.io import ZarrBackend
    from earth2studio.models.px import DLWP
    from earth2studio.perturbation import Gaussian
    from earth2studio.run import ensemble

    # Load the default model package which downloads the check point from NGC
    package = DLWP.load_default_package()
    model = DLWP.load_model(package)

    # Create the data source
    data = GFS()

    # Create the IO handler, store in memory
    chunks = {"ensemble": 1, "time": 1}
    io_unperturbed = ZarrBackend(file_name="outputs/05_ensemble.zarr", chunks=chunks)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /localhome/local-ngeneva/miniconda3/envs/e2studio/lib/python3.10/site-packages/modulus/models/module.py:360: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.
      model_dict = torch.load(




.. GENERATED FROM PYTHON SOURCE LINES 108-116

Execute the Workflow
--------------------
First, we will run the ensemble workflow but with a :py:meth:`earth2studio.perturbation.Gaussian`
perturbation as the control.

The workflow will return the provided IO object back to the user, which can be used to
then post process. Some have additional APIs that can be handy for post-processing or
saving to file. Check the API docs for more information.

.. GENERATED FROM PYTHON SOURCE LINES 118-141

.. code-block:: Python

    nsteps = 4 * 12
    nensemble = 16
    batch_size = 4
    forecast_date = "2024-01-30"
    output_coords = {
        "lat": np.arange(25.0, 60.0, 0.25),
        "lon": np.arange(230.0, 300.0, 0.25),
        "variable": np.array(["tcwv", "z500"]),
    }

    # First run with no model perturbation
    io_unperturbed = ensemble(
        [forecast_date],
        nsteps,
        nensemble,
        model,
        data,
        io_unperturbed,
        Gaussian(noise_amplitude=0.01),
        output_coords=output_coords,
        batch_size=batch_size,
    )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2024-09-20 16:01:38.349 | INFO     | earth2studio.run:ensemble:294 - Running ensemble inference!
    2024-09-20 16:01:38.351 | INFO     | earth2studio.run:ensemble:302 - Inference device: cuda
    2024-09-20 16:01:38.360 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:178 - Fetching GFS index file: 2024-01-29 18:00:00 lead 0:00:00
    Fetching GFS for 2024-01-29 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                               2024-09-20 16:01:39.219 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: t850 at 2024-01-29 18:00:00_0
    Fetching GFS for 2024-01-29 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                               2024-09-20 16:01:39.258 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: z1000 at 2024-01-29 18:00:00_0
    Fetching GFS for 2024-01-29 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                               2024-09-20 16:01:39.278 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: z700 at 2024-01-29 18:00:00_0
    Fetching GFS for 2024-01-29 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                               2024-09-20 16:01:39.298 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: z500 at 2024-01-29 18:00:00_0
    Fetching GFS for 2024-01-29 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                               2024-09-20 16:01:39.317 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: z300 at 2024-01-29 18:00:00_0
    Fetching GFS for 2024-01-29 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching GFS for 2024-01-29 18:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 42.96it/s]                                                                                       2024-09-20 16:01:39.336 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: tcwv at 2024-01-29 18:00:00_0
    Fetching GFS for 2024-01-29 18:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 42.96it/s]                                                                                       2024-09-20 16:01:39.355 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: t2m at 2024-01-29 18:00:00_0
    Fetching GFS for 2024-01-29 18:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 42.96it/s]    Fetching GFS for 2024-01-29 18:00:00: 100%|██████████| 7/7 [00:00<00:00, 45.31it/s]
    2024-09-20 16:01:39.386 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:178 - Fetching GFS index file: 2024-01-30 00:00:00 lead 0:00:00
    Fetching GFS for 2024-01-30 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                               2024-09-20 16:01:39.614 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: t850 at 2024-01-30 00:00:00_0
    Fetching GFS for 2024-01-30 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                               2024-09-20 16:01:39.634 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: z1000 at 2024-01-30 00:00:00_0
    Fetching GFS for 2024-01-30 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                               2024-09-20 16:01:39.653 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: z700 at 2024-01-30 00:00:00_0
    Fetching GFS for 2024-01-30 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                               2024-09-20 16:01:39.672 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: z500 at 2024-01-30 00:00:00_0
    Fetching GFS for 2024-01-30 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                               2024-09-20 16:01:39.691 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: z300 at 2024-01-30 00:00:00_0
    Fetching GFS for 2024-01-30 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                               2024-09-20 16:01:39.710 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: tcwv at 2024-01-30 00:00:00_0
    Fetching GFS for 2024-01-30 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching GFS for 2024-01-30 00:00:00:  86%|████████▌ | 6/7 [00:00<00:00, 52.42it/s]                                                                                       2024-09-20 16:01:39.729 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: t2m at 2024-01-30 00:00:00_0
    Fetching GFS for 2024-01-30 00:00:00:  86%|████████▌ | 6/7 [00:00<00:00, 52.42it/s]    Fetching GFS for 2024-01-30 00:00:00: 100%|██████████| 7/7 [00:00<00:00, 52.38it/s]
    2024-09-20 16:01:39.781 | SUCCESS  | earth2studio.run:ensemble:315 - Fetched data from GFS
    2024-09-20 16:01:39.795 | INFO     | earth2studio.run:ensemble:337 - Starting 16 Member Ensemble Inference with             4 number of batches.
    Total Ensemble Batches:   0%|          | 0/4 [00:00<?, ?it/s]
    Running batch 0 inference:   0%|          | 0/49 [00:00<?, ?it/s]
    Running batch 0 inference:   6%|▌         | 3/49 [00:00<00:01, 27.25it/s]
    Running batch 0 inference:  12%|█▏        | 6/49 [00:00<00:01, 23.62it/s]
    Running batch 0 inference:  18%|█▊        | 9/49 [00:00<00:01, 22.74it/s]
    Running batch 0 inference:  24%|██▍       | 12/49 [00:00<00:01, 20.72it/s]
    Running batch 0 inference:  31%|███       | 15/49 [00:00<00:01, 19.78it/s]
    Running batch 0 inference:  37%|███▋      | 18/49 [00:00<00:01, 18.24it/s]
    Running batch 0 inference:  41%|████      | 20/49 [00:01<00:01, 17.57it/s]
    Running batch 0 inference:  45%|████▍     | 22/49 [00:01<00:01, 16.97it/s]
    Running batch 0 inference:  49%|████▉     | 24/49 [00:01<00:01, 16.14it/s]
    Running batch 0 inference:  53%|█████▎    | 26/49 [00:01<00:01, 15.43it/s]
    Running batch 0 inference:  57%|█████▋    | 28/49 [00:01<00:01, 14.80it/s]
    Running batch 0 inference:  61%|██████    | 30/49 [00:01<00:01, 14.27it/s]
    Running batch 0 inference:  65%|██████▌   | 32/49 [00:01<00:01, 13.84it/s]
    Running batch 0 inference:  69%|██████▉   | 34/49 [00:02<00:01, 13.44it/s]
    Running batch 0 inference:  73%|███████▎  | 36/49 [00:02<00:00, 13.04it/s]
    Running batch 0 inference:  78%|███████▊  | 38/49 [00:02<00:00, 12.59it/s]
    Running batch 0 inference:  82%|████████▏ | 40/49 [00:02<00:00, 11.87it/s]
    Running batch 0 inference:  86%|████████▌ | 42/49 [00:02<00:00, 11.20it/s]
    Running batch 0 inference:  90%|████████▉ | 44/49 [00:02<00:00, 10.69it/s]
    Running batch 0 inference:  94%|█████████▍| 46/49 [00:03<00:00, 10.35it/s]
    Running batch 0 inference:  98%|█████████▊| 48/49 [00:03<00:00, 10.09it/s]
                                                                                  Total Ensemble Batches:  25%|██▌       | 1/4 [00:03<00:10,  3.52s/it]
    Running batch 4 inference:   0%|          | 0/49 [00:00<?, ?it/s]
    Running batch 4 inference:   6%|▌         | 3/49 [00:00<00:01, 28.29it/s]
    Running batch 4 inference:  12%|█▏        | 6/49 [00:00<00:01, 22.94it/s]
    Running batch 4 inference:  18%|█▊        | 9/49 [00:00<00:01, 21.33it/s]
    Running batch 4 inference:  24%|██▍       | 12/49 [00:00<00:01, 18.51it/s]
    Running batch 4 inference:  29%|██▊       | 14/49 [00:00<00:01, 17.63it/s]
    Running batch 4 inference:  33%|███▎      | 16/49 [00:00<00:01, 16.85it/s]
    Running batch 4 inference:  37%|███▋      | 18/49 [00:00<00:01, 16.25it/s]
    Running batch 4 inference:  41%|████      | 20/49 [00:01<00:01, 15.77it/s]
    Running batch 4 inference:  45%|████▍     | 22/49 [00:01<00:01, 15.31it/s]
    Running batch 4 inference:  49%|████▉     | 24/49 [00:01<00:01, 14.95it/s]
    Running batch 4 inference:  53%|█████▎    | 26/49 [00:01<00:01, 14.57it/s]
    Running batch 4 inference:  57%|█████▋    | 28/49 [00:01<00:01, 14.21it/s]
    Running batch 4 inference:  61%|██████    | 30/49 [00:01<00:01, 13.81it/s]
    Running batch 4 inference:  65%|██████▌   | 32/49 [00:02<00:01, 13.58it/s]
    Running batch 4 inference:  69%|██████▉   | 34/49 [00:02<00:01, 13.18it/s]
    Running batch 4 inference:  73%|███████▎  | 36/49 [00:02<00:01, 12.71it/s]
    Running batch 4 inference:  78%|███████▊  | 38/49 [00:02<00:00, 12.26it/s]
    Running batch 4 inference:  82%|████████▏ | 40/49 [00:02<00:00, 11.80it/s]
    Running batch 4 inference:  86%|████████▌ | 42/49 [00:02<00:00, 11.32it/s]
    Running batch 4 inference:  90%|████████▉ | 44/49 [00:03<00:00, 10.85it/s]
    Running batch 4 inference:  94%|█████████▍| 46/49 [00:03<00:00, 10.47it/s]
    Running batch 4 inference:  98%|█████████▊| 48/49 [00:03<00:00, 10.17it/s]
                                                                                  Total Ensemble Batches:  50%|█████     | 2/4 [00:07<00:07,  3.58s/it]
    Running batch 8 inference:   0%|          | 0/49 [00:00<?, ?it/s]
    Running batch 8 inference:   6%|▌         | 3/49 [00:00<00:01, 28.40it/s]
    Running batch 8 inference:  12%|█▏        | 6/49 [00:00<00:01, 22.88it/s]
    Running batch 8 inference:  18%|█▊        | 9/49 [00:00<00:01, 21.40it/s]
    Running batch 8 inference:  24%|██▍       | 12/49 [00:00<00:01, 18.71it/s]
    Running batch 8 inference:  29%|██▊       | 14/49 [00:00<00:01, 17.91it/s]
    Running batch 8 inference:  33%|███▎      | 16/49 [00:00<00:01, 17.18it/s]
    Running batch 8 inference:  37%|███▋      | 18/49 [00:00<00:01, 16.49it/s]
    Running batch 8 inference:  41%|████      | 20/49 [00:01<00:01, 15.93it/s]
    Running batch 8 inference:  45%|████▍     | 22/49 [00:01<00:01, 15.48it/s]
    Running batch 8 inference:  49%|████▉     | 24/49 [00:01<00:01, 15.06it/s]
    Running batch 8 inference:  53%|█████▎    | 26/49 [00:01<00:01, 14.70it/s]
    Running batch 8 inference:  57%|█████▋    | 28/49 [00:01<00:01, 14.25it/s]
    Running batch 8 inference:  61%|██████    | 30/49 [00:01<00:01, 13.90it/s]
    Running batch 8 inference:  65%|██████▌   | 32/49 [00:02<00:01, 13.53it/s]
    Running batch 8 inference:  69%|██████▉   | 34/49 [00:02<00:01, 13.06it/s]
    Running batch 8 inference:  73%|███████▎  | 36/49 [00:02<00:01, 12.55it/s]
    Running batch 8 inference:  78%|███████▊  | 38/49 [00:02<00:00, 12.12it/s]
    Running batch 8 inference:  82%|████████▏ | 40/49 [00:02<00:00, 11.63it/s]
    Running batch 8 inference:  86%|████████▌ | 42/49 [00:02<00:00, 11.17it/s]
    Running batch 8 inference:  90%|████████▉ | 44/49 [00:03<00:00, 10.78it/s]
    Running batch 8 inference:  94%|█████████▍| 46/49 [00:03<00:00, 10.44it/s]
    Running batch 8 inference:  98%|█████████▊| 48/49 [00:03<00:00, 10.20it/s]
                                                                                  Total Ensemble Batches:  75%|███████▌  | 3/4 [00:10<00:03,  3.60s/it]
    Running batch 12 inference:   0%|          | 0/49 [00:00<?, ?it/s]
    Running batch 12 inference:   6%|▌         | 3/49 [00:00<00:01, 28.19it/s]
    Running batch 12 inference:  12%|█▏        | 6/49 [00:00<00:01, 22.97it/s]
    Running batch 12 inference:  18%|█▊        | 9/49 [00:00<00:01, 21.46it/s]
    Running batch 12 inference:  24%|██▍       | 12/49 [00:00<00:01, 18.83it/s]
    Running batch 12 inference:  29%|██▊       | 14/49 [00:00<00:01, 17.99it/s]
    Running batch 12 inference:  33%|███▎      | 16/49 [00:00<00:01, 17.28it/s]
    Running batch 12 inference:  37%|███▋      | 18/49 [00:00<00:01, 16.55it/s]
    Running batch 12 inference:  41%|████      | 20/49 [00:01<00:01, 15.96it/s]
    Running batch 12 inference:  45%|████▍     | 22/49 [00:01<00:01, 15.45it/s]
    Running batch 12 inference:  49%|████▉     | 24/49 [00:01<00:01, 15.02it/s]
    Running batch 12 inference:  53%|█████▎    | 26/49 [00:01<00:01, 14.65it/s]
    Running batch 12 inference:  57%|█████▋    | 28/49 [00:01<00:01, 14.28it/s]
    Running batch 12 inference:  61%|██████    | 30/49 [00:01<00:01, 13.93it/s]
    Running batch 12 inference:  65%|██████▌   | 32/49 [00:01<00:01, 13.58it/s]
    Running batch 12 inference:  69%|██████▉   | 34/49 [00:02<00:01, 13.15it/s]
    Running batch 12 inference:  73%|███████▎  | 36/49 [00:02<00:01, 12.61it/s]
    Running batch 12 inference:  78%|███████▊  | 38/49 [00:02<00:00, 12.08it/s]
    Running batch 12 inference:  82%|████████▏ | 40/49 [00:02<00:00, 11.61it/s]
    Running batch 12 inference:  86%|████████▌ | 42/49 [00:02<00:00, 11.12it/s]
    Running batch 12 inference:  90%|████████▉ | 44/49 [00:03<00:00, 10.74it/s]
    Running batch 12 inference:  94%|█████████▍| 46/49 [00:03<00:00, 10.43it/s]
    Running batch 12 inference:  98%|█████████▊| 48/49 [00:03<00:00, 10.16it/s]
                                                                                   Total Ensemble Batches: 100%|██████████| 4/4 [00:14<00:00,  3.61s/it]    Total Ensemble Batches: 100%|██████████| 4/4 [00:14<00:00,  3.60s/it]
    2024-09-20 16:01:54.181 | SUCCESS  | earth2studio.run:ensemble:382 - Inference complete




.. GENERATED FROM PYTHON SOURCE LINES 142-147

Now let's introduce slight model perturbation using the prognostic model hooks defined
in :py:class:`earth2studio.models.px.utils.PrognosticMixin`.
Note that :py:obj:`center.unsqueeze(-1)` is DLWP specific since it operates on a cubed sphere
with grid dimensions (nface, lat, lon) instead of just (lat,lon).
To switch out the model, consider removing the :py:meth:`unsqueeze` .

.. GENERATED FROM PYTHON SOURCE LINES 149-177

.. code-block:: Python

    model.front_hook = lambda x, coords: (
        x
        - 0.1
        * x.var(dim=0)
        * (x - model.center.unsqueeze(-1))
        / (model.scale.unsqueeze(-1)) ** 2
        + 0.1 * (x - x.mean(dim=0)),
        coords,
    )
    # Also could use model.rear_hook = ...

    io_perturbed = ZarrBackend(
        file_name="outputs/05_ensemble_model_perturbation.zarr",
        chunks=chunks,
        backend_kwargs={"overwrite": True},
    )
    io_perturbed = ensemble(
        [forecast_date],
        nsteps,
        nensemble,
        model,
        data,
        io_perturbed,
        Gaussian(noise_amplitude=0.01),
        output_coords=output_coords,
        batch_size=batch_size,
    )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2024-09-20 16:01:54.258 | INFO     | earth2studio.run:ensemble:294 - Running ensemble inference!
    2024-09-20 16:01:54.259 | INFO     | earth2studio.run:ensemble:302 - Inference device: cuda
    2024-09-20 16:01:54.261 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:178 - Fetching GFS index file: 2024-01-29 18:00:00 lead 0:00:00
    Fetching GFS for 2024-01-29 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                               2024-09-20 16:01:55.104 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: t850 at 2024-01-29 18:00:00_0
    Fetching GFS for 2024-01-29 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                               2024-09-20 16:01:55.141 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: z1000 at 2024-01-29 18:00:00_0
    Fetching GFS for 2024-01-29 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                               2024-09-20 16:01:55.160 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: z700 at 2024-01-29 18:00:00_0
    Fetching GFS for 2024-01-29 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                               2024-09-20 16:01:55.179 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: z500 at 2024-01-29 18:00:00_0
    Fetching GFS for 2024-01-29 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                               2024-09-20 16:01:55.198 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: z300 at 2024-01-29 18:00:00_0
    Fetching GFS for 2024-01-29 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching GFS for 2024-01-29 18:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 44.63it/s]                                                                                       2024-09-20 16:01:55.216 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: tcwv at 2024-01-29 18:00:00_0
    Fetching GFS for 2024-01-29 18:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 44.63it/s]                                                                                       2024-09-20 16:01:55.235 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: t2m at 2024-01-29 18:00:00_0
    Fetching GFS for 2024-01-29 18:00:00:  71%|███████▏  | 5/7 [00:00<00:00, 44.63it/s]    Fetching GFS for 2024-01-29 18:00:00: 100%|██████████| 7/7 [00:00<00:00, 46.78it/s]
    2024-09-20 16:01:55.266 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:178 - Fetching GFS index file: 2024-01-30 00:00:00 lead 0:00:00
    Fetching GFS for 2024-01-30 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                               2024-09-20 16:01:55.507 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: t850 at 2024-01-30 00:00:00_0
    Fetching GFS for 2024-01-30 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                               2024-09-20 16:01:55.527 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: z1000 at 2024-01-30 00:00:00_0
    Fetching GFS for 2024-01-30 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                               2024-09-20 16:01:55.545 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: z700 at 2024-01-30 00:00:00_0
    Fetching GFS for 2024-01-30 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                               2024-09-20 16:01:55.563 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: z500 at 2024-01-30 00:00:00_0
    Fetching GFS for 2024-01-30 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                               2024-09-20 16:01:55.582 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: z300 at 2024-01-30 00:00:00_0
    Fetching GFS for 2024-01-30 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                               2024-09-20 16:01:55.600 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: tcwv at 2024-01-30 00:00:00_0
    Fetching GFS for 2024-01-30 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching GFS for 2024-01-30 00:00:00:  86%|████████▌ | 6/7 [00:00<00:00, 53.61it/s]                                                                                       2024-09-20 16:01:55.619 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:226 - Fetching GFS grib file for variable: t2m at 2024-01-30 00:00:00_0
    Fetching GFS for 2024-01-30 00:00:00:  86%|████████▌ | 6/7 [00:00<00:00, 53.61it/s]    Fetching GFS for 2024-01-30 00:00:00: 100%|██████████| 7/7 [00:00<00:00, 53.53it/s]
    2024-09-20 16:01:55.671 | SUCCESS  | earth2studio.run:ensemble:315 - Fetched data from GFS
    2024-09-20 16:01:55.684 | INFO     | earth2studio.run:ensemble:337 - Starting 16 Member Ensemble Inference with             4 number of batches.
    Total Ensemble Batches:   0%|          | 0/4 [00:00<?, ?it/s]
    Running batch 0 inference:   0%|          | 0/49 [00:00<?, ?it/s]
    Running batch 0 inference:   6%|▌         | 3/49 [00:00<00:01, 26.20it/s]
    Running batch 0 inference:  12%|█▏        | 6/49 [00:00<00:01, 22.30it/s]
    Running batch 0 inference:  18%|█▊        | 9/49 [00:00<00:01, 21.24it/s]
    Running batch 0 inference:  24%|██▍       | 12/49 [00:00<00:02, 18.42it/s]
    Running batch 0 inference:  29%|██▊       | 14/49 [00:00<00:01, 17.68it/s]
    Running batch 0 inference:  33%|███▎      | 16/49 [00:00<00:01, 16.76it/s]
    Running batch 0 inference:  37%|███▋      | 18/49 [00:01<00:01, 16.25it/s]
    Running batch 0 inference:  41%|████      | 20/49 [00:01<00:01, 15.69it/s]
    Running batch 0 inference:  45%|████▍     | 22/49 [00:01<00:01, 15.31it/s]
    Running batch 0 inference:  49%|████▉     | 24/49 [00:01<00:01, 14.77it/s]
    Running batch 0 inference:  53%|█████▎    | 26/49 [00:01<00:01, 14.45it/s]
    Running batch 0 inference:  57%|█████▋    | 28/49 [00:01<00:01, 14.16it/s]
    Running batch 0 inference:  61%|██████    | 30/49 [00:01<00:01, 13.83it/s]
    Running batch 0 inference:  65%|██████▌   | 32/49 [00:02<00:01, 13.57it/s]
    Running batch 0 inference:  69%|██████▉   | 34/49 [00:02<00:01, 13.12it/s]
    Running batch 0 inference:  73%|███████▎  | 36/49 [00:02<00:01, 12.60it/s]
    Running batch 0 inference:  78%|███████▊  | 38/49 [00:02<00:00, 12.18it/s]
    Running batch 0 inference:  82%|████████▏ | 40/49 [00:02<00:00, 11.71it/s]
    Running batch 0 inference:  86%|████████▌ | 42/49 [00:02<00:00, 11.24it/s]
    Running batch 0 inference:  90%|████████▉ | 44/49 [00:03<00:00, 10.82it/s]
    Running batch 0 inference:  94%|█████████▍| 46/49 [00:03<00:00, 10.46it/s]
    Running batch 0 inference:  98%|█████████▊| 48/49 [00:03<00:00, 10.17it/s]
                                                                                  Total Ensemble Batches:  25%|██▌       | 1/4 [00:03<00:10,  3.64s/it]
    Running batch 4 inference:   0%|          | 0/49 [00:00<?, ?it/s]
    Running batch 4 inference:   6%|▌         | 3/49 [00:00<00:01, 28.65it/s]
    Running batch 4 inference:  12%|█▏        | 6/49 [00:00<00:01, 23.27it/s]
    Running batch 4 inference:  18%|█▊        | 9/49 [00:00<00:01, 21.19it/s]
    Running batch 4 inference:  24%|██▍       | 12/49 [00:00<00:01, 18.57it/s]
    Running batch 4 inference:  29%|██▊       | 14/49 [00:00<00:01, 17.76it/s]
    Running batch 4 inference:  33%|███▎      | 16/49 [00:00<00:01, 17.04it/s]
    Running batch 4 inference:  37%|███▋      | 18/49 [00:00<00:01, 16.37it/s]
    Running batch 4 inference:  41%|████      | 20/49 [00:01<00:01, 15.82it/s]
    Running batch 4 inference:  45%|████▍     | 22/49 [00:01<00:01, 15.42it/s]
    Running batch 4 inference:  49%|████▉     | 24/49 [00:01<00:01, 14.99it/s]
    Running batch 4 inference:  53%|█████▎    | 26/49 [00:01<00:01, 14.55it/s]
    Running batch 4 inference:  57%|█████▋    | 28/49 [00:01<00:01, 14.26it/s]
    Running batch 4 inference:  61%|██████    | 30/49 [00:01<00:01, 13.93it/s]
    Running batch 4 inference:  65%|██████▌   | 32/49 [00:02<00:01, 13.61it/s]
    Running batch 4 inference:  69%|██████▉   | 34/49 [00:02<00:01, 13.19it/s]
    Running batch 4 inference:  73%|███████▎  | 36/49 [00:02<00:01, 12.72it/s]
    Running batch 4 inference:  78%|███████▊  | 38/49 [00:02<00:00, 12.26it/s]
    Running batch 4 inference:  82%|████████▏ | 40/49 [00:02<00:00, 11.74it/s]
    Running batch 4 inference:  86%|████████▌ | 42/49 [00:02<00:00, 11.19it/s]
    Running batch 4 inference:  90%|████████▉ | 44/49 [00:03<00:00, 10.80it/s]
    Running batch 4 inference:  94%|█████████▍| 46/49 [00:03<00:00, 10.47it/s]
    Running batch 4 inference:  98%|█████████▊| 48/49 [00:03<00:00, 10.20it/s]
                                                                                  Total Ensemble Batches:  50%|█████     | 2/4 [00:07<00:07,  3.63s/it]
    Running batch 8 inference:   0%|          | 0/49 [00:00<?, ?it/s]
    Running batch 8 inference:   6%|▌         | 3/49 [00:00<00:01, 28.60it/s]
    Running batch 8 inference:  12%|█▏        | 6/49 [00:00<00:01, 23.19it/s]
    Running batch 8 inference:  18%|█▊        | 9/49 [00:00<00:01, 21.65it/s]
    Running batch 8 inference:  24%|██▍       | 12/49 [00:00<00:01, 18.92it/s]
    Running batch 8 inference:  29%|██▊       | 14/49 [00:00<00:01, 17.89it/s]
    Running batch 8 inference:  33%|███▎      | 16/49 [00:00<00:01, 17.05it/s]
    Running batch 8 inference:  37%|███▋      | 18/49 [00:00<00:01, 16.42it/s]
    Running batch 8 inference:  41%|████      | 20/49 [00:01<00:01, 15.84it/s]
    Running batch 8 inference:  45%|████▍     | 22/49 [00:01<00:01, 15.45it/s]
    Running batch 8 inference:  49%|████▉     | 24/49 [00:01<00:01, 14.98it/s]
    Running batch 8 inference:  53%|█████▎    | 26/49 [00:01<00:01, 14.61it/s]
    Running batch 8 inference:  57%|█████▋    | 28/49 [00:01<00:01, 14.24it/s]
    Running batch 8 inference:  61%|██████    | 30/49 [00:01<00:01, 13.90it/s]
    Running batch 8 inference:  65%|██████▌   | 32/49 [00:02<00:01, 13.59it/s]
    Running batch 8 inference:  69%|██████▉   | 34/49 [00:02<00:01, 13.20it/s]
    Running batch 8 inference:  73%|███████▎  | 36/49 [00:02<00:01, 12.71it/s]
    Running batch 8 inference:  78%|███████▊  | 38/49 [00:02<00:00, 12.26it/s]
    Running batch 8 inference:  82%|████████▏ | 40/49 [00:02<00:00, 11.69it/s]
    Running batch 8 inference:  86%|████████▌ | 42/49 [00:02<00:00, 11.22it/s]
    Running batch 8 inference:  90%|████████▉ | 44/49 [00:03<00:00, 10.80it/s]
    Running batch 8 inference:  94%|█████████▍| 46/49 [00:03<00:00, 10.46it/s]
    Running batch 8 inference:  98%|█████████▊| 48/49 [00:03<00:00, 10.20it/s]
                                                                                  Total Ensemble Batches:  75%|███████▌  | 3/4 [00:10<00:03,  3.62s/it]
    Running batch 12 inference:   0%|          | 0/49 [00:00<?, ?it/s]
    Running batch 12 inference:   6%|▌         | 3/49 [00:00<00:01, 28.45it/s]
    Running batch 12 inference:  12%|█▏        | 6/49 [00:00<00:01, 23.15it/s]
    Running batch 12 inference:  18%|█▊        | 9/49 [00:00<00:01, 21.56it/s]
    Running batch 12 inference:  24%|██▍       | 12/49 [00:00<00:01, 18.74it/s]
    Running batch 12 inference:  29%|██▊       | 14/49 [00:00<00:01, 17.77it/s]
    Running batch 12 inference:  33%|███▎      | 16/49 [00:00<00:01, 17.04it/s]
    Running batch 12 inference:  37%|███▋      | 18/49 [00:00<00:01, 16.47it/s]
    Running batch 12 inference:  41%|████      | 20/49 [00:01<00:01, 15.89it/s]
    Running batch 12 inference:  45%|████▍     | 22/49 [00:01<00:01, 15.46it/s]
    Running batch 12 inference:  49%|████▉     | 24/49 [00:01<00:01, 14.96it/s]
    Running batch 12 inference:  53%|█████▎    | 26/49 [00:01<00:01, 14.62it/s]
    Running batch 12 inference:  57%|█████▋    | 28/49 [00:01<00:01, 14.22it/s]
    Running batch 12 inference:  61%|██████    | 30/49 [00:01<00:01, 13.81it/s]
    Running batch 12 inference:  65%|██████▌   | 32/49 [00:02<00:01, 13.52it/s]
    Running batch 12 inference:  69%|██████▉   | 34/49 [00:02<00:01, 13.15it/s]
    Running batch 12 inference:  73%|███████▎  | 36/49 [00:02<00:01, 12.65it/s]
    Running batch 12 inference:  78%|███████▊  | 38/49 [00:02<00:00, 12.24it/s]
    Running batch 12 inference:  82%|████████▏ | 40/49 [00:02<00:00, 11.69it/s]
    Running batch 12 inference:  86%|████████▌ | 42/49 [00:02<00:00, 11.22it/s]
    Running batch 12 inference:  90%|████████▉ | 44/49 [00:03<00:00, 10.80it/s]
    Running batch 12 inference:  94%|█████████▍| 46/49 [00:03<00:00, 10.47it/s]
    Running batch 12 inference:  98%|█████████▊| 48/49 [00:03<00:00, 10.21it/s]
                                                                                   Total Ensemble Batches: 100%|██████████| 4/4 [00:14<00:00,  3.62s/it]    Total Ensemble Batches: 100%|██████████| 4/4 [00:14<00:00,  3.62s/it]
    2024-09-20 16:02:10.171 | SUCCESS  | earth2studio.run:ensemble:382 - Inference complete




.. GENERATED FROM PYTHON SOURCE LINES 178-185

Post Processing
---------------
The last step is to post process our results.
Here we plot and compare the ensemble mean and standard deviation from using an
unperturbed/perturbed model.

Notice that the Zarr IO function has additional APIs to interact with the stored data.

.. GENERATED FROM PYTHON SOURCE LINES 187-322

.. code-block:: Python

    import cartopy.crs as ccrs
    import matplotlib.pyplot as plt
    from matplotlib.colors import LogNorm

    levels_unperturbed = np.linspace(0, io_unperturbed["tcwv"][:].max())
    levels_perturbed = np.linspace(0, io_perturbed["tcwv"][:].max())


    std_levels_perturbed = np.linspace(0, io_perturbed["tcwv"][:].std(axis=0).max())

    plt.close("all")
    fig = plt.figure(figsize=(20, 10), tight_layout=True)
    ax0 = fig.add_subplot(2, 2, 1, projection=ccrs.PlateCarree())
    ax1 = fig.add_subplot(2, 2, 2, projection=ccrs.PlateCarree())
    ax2 = fig.add_subplot(2, 2, 3, projection=ccrs.PlateCarree())
    ax3 = fig.add_subplot(2, 2, 4, projection=ccrs.PlateCarree())


    def update(frame):
        """This function updates the frame with a new lead time for animation."""
        import warnings

        warnings.filterwarnings("ignore")
        ax0.clear()
        ax1.clear()
        ax2.clear()
        ax3.clear()

        ## Update unperturbed image
        im0 = ax0.contourf(
            io_unperturbed["lon"][:],
            io_unperturbed["lat"][:],
            io_unperturbed["tcwv"][:, 0, frame].mean(axis=0),
            transform=ccrs.PlateCarree(),
            cmap="Blues",
            levels=levels_unperturbed,
        )
        ax0.coastlines()
        ax0.gridlines()

        im1 = ax1.contourf(
            io_unperturbed["lon"][:],
            io_unperturbed["lat"][:],
            io_unperturbed["tcwv"][:, 0, frame].std(axis=0),
            transform=ccrs.PlateCarree(),
            cmap="RdPu",
            levels=std_levels_perturbed,
            norm=LogNorm(vmin=1e-1, vmax=std_levels_perturbed[-1]),
        )
        ax1.coastlines()
        ax1.gridlines()

        im2 = ax2.contourf(
            io_perturbed["lon"][:],
            io_perturbed["lat"][:],
            io_perturbed["tcwv"][:, 0, frame].mean(axis=0),
            transform=ccrs.PlateCarree(),
            cmap="Blues",
            levels=levels_perturbed,
        )
        ax2.coastlines()
        ax2.gridlines()

        im3 = ax3.contourf(
            io_perturbed["lon"][:],
            io_perturbed["lat"][:],
            io_perturbed["tcwv"][:, 0, frame].std(axis=0),
            transform=ccrs.PlateCarree(),
            cmap="RdPu",
            levels=std_levels_perturbed,
            norm=LogNorm(vmin=1e-1, vmax=std_levels_perturbed[-1]),
        )
        ax3.coastlines()
        ax3.gridlines()

        for i in range(16):
            ax0.contour(
                io_unperturbed["lon"][:],
                io_unperturbed["lat"][:],
                io_unperturbed["z500"][i, 0, frame] / 100.0,
                transform=ccrs.PlateCarree(),
                levels=np.arange(485, 580, 15),
                colors="black",
                linestyle="dashed",
            )

            ax2.contour(
                io_perturbed["lon"][:],
                io_perturbed["lat"][:],
                io_perturbed["z500"][i, 0, frame] / 100.0,
                transform=ccrs.PlateCarree(),
                levels=np.arange(485, 580, 15),
                colors="black",
                linestyle="dashed",
            )
        plt.suptitle(
            f'Forecast Starting on {forecast_date} - Lead Time - {io_perturbed["lead_time"][frame]}'
        )

        ax0.set_title("Unperturbed Ensemble Mean - tcwv + z500 countors")
        ax1.set_title("Unperturbed Ensemble Std - tcwv")
        ax2.set_title("Perturbed Ensemble Mean - tcwv + z500 contours")
        ax3.set_title("Perturbed Ensemble Std - tcwv")

        if frame == 0:
            plt.colorbar(
                im0, ax=ax0, shrink=0.75, pad=0.04, label="kg m^-2", format="%2.1f"
            )
            plt.colorbar(
                im1, ax=ax1, shrink=0.75, pad=0.04, label="kg m^-2", format="%1.2e"
            )
            plt.colorbar(
                im2, ax=ax2, shrink=0.75, pad=0.04, label="kg m^-2", format="%2.1f"
            )
            plt.colorbar(
                im3, ax=ax3, shrink=0.75, pad=0.04, label="kg m^-2", format="%1.2e"
            )


    # Uncomment this for animation
    # import matplotlib.animation as animation
    # update(0)
    # ani = animation.FuncAnimation(
    # fig=fig, func=update, frames=range(1, nsteps), cache_frame_data=False
    # )
    # ani.save(f"outputs/05_model_perturbation_{forecast_date}.gif", dpi=300)


    for lt in [10, 20, 30, 40]:
        update(lt)
        plt.savefig(
            f"outputs/05_model_perturbation_{forecast_date}_leadtime_{lt}.png",
            dpi=300,
            bbox_inches="tight",
        )



.. image-sg:: /examples/images/sphx_glr_06_model_perturbation_hook_001.png
   :alt: Forecast Starting on 2024-01-30 - Lead Time - 240 hours, Unperturbed Ensemble Mean - tcwv + z500 countors, Unperturbed Ensemble Std - tcwv, Perturbed Ensemble Mean - tcwv + z500 contours, Perturbed Ensemble Std - tcwv
   :srcset: /examples/images/sphx_glr_06_model_perturbation_hook_001.png, /examples/images/sphx_glr_06_model_perturbation_hook_001_2_00x.png 2.00x
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 41.510 seconds)

**Estimated memory usage:**  421 MB


.. _sphx_glr_download_examples_06_model_perturbation_hook.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 06_model_perturbation_hook.ipynb <06_model_perturbation_hook.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 06_model_perturbation_hook.py <06_model_perturbation_hook.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 06_model_perturbation_hook.zip <06_model_perturbation_hook.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
